--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,12 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Web Publishing</title>
+		<script src="/admin-ui.js"></script>
 	</head>
 	<body>
 		<ul>
 			{% for site in sites %}
-			<li><a href="#">site</a></li>
+			<li><a href="#" onClick="offerSite('{{ site }}')">{{ site }}</a></li>
 			{% endfor %}
 		</ul>
 	</body>
